User ( Retrive By ID, By Rolename)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=9000
 
+## SQLServer Configuration
+spring.datasource.url=jdbc:sqlserver://vma-fa20se28.database.windows.net:1433;database=VMA;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=Break1205
+spring.datasource.password=Vessalius1205
+spring.datasource.validationQuery=SELECT 1
+## MyBatis Configuration
+mybatis.type-aliases-package=com/fa20se28/vma/entity
