--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9000
 
 ## SQLServer Configuration
 spring.datasource.url=jdbc:sqlserver://vma-fa20se28.database.windows.net:1433;database=VMA;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.driverDetail-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=Break1205
 spring.datasource.password=Vessalius1205
 spring.datasource.validationQuery=SELECT 1
