--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,12 @@ spring.datasource.driverDetail-class-name=com.microsoft.sqlserver.jdbc.SQLServer
 spring.datasource.username=Break1205
 spring.datasource.password=Vessalius1205
 spring.datasource.validationQuery=SELECT 1
+
 ## MyBatis Configuration
 mybatis.type-aliases-package=com/fa20se28/vma/entity
+
+## Firebase Configuration
+firebase.credential.resource-path=vma-fa20se28-firebase-adminsdk-y3s4m-a6a003498a.json
+
+## Spring Security Configuration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
