Add JWT With Firebase TODO: authorize

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ firebase.credential.resource-path=vma-fa20se28-firebase-adminsdk-y3s4m-a6a003498
 
 ## Spring Security Configuration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
+
+## JWT Configuration
+jwt.secret=fatbearslikeicecream
