--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=9000
 
 ## SQLServer Configuration
-spring.datasource.url=jdbc:sqlserver://vma-fa20se28.database.windows.net:1433;database=VMA;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.url=jdbc:sqlserver://vma-fa20se28.database.windows.net:1433;database=VMA;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=VMA;
 spring.datasource.driverDetail-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.username=Break1205
+#spring.datasource.username=Break1205
+spring.datasource.username=sa
 spring.datasource.password=Vessalius1205
 spring.datasource.validationQuery=SELECT 1
 
